# Rishika_Randev_Mini_7

./: Behavior.db  Makefile  README.md  User Guide.md  main.py  requirements.txt  setup.cfg  setup.py  test_main.py
.github/workflows/: cicd.yml
data/: Behaviors.csv  MH.csv
mylib/: extract.py  query.py  transform_load.py
src/: main.py
src/mylib/: transform_load.py
