from setuptools import find_packages

[metadata]
name = databricksRishika
version = 0.0.1
author = Rishika Randev
author_email = rishika.randev@duke.edu

[options]
package_dir=
    =src
packages = find:
install_requires = 
    requests
    databricks-sql-connector
    pandas
    dotenv
    fire;


[options.entry_points]
console_scripts = 
    etl_query = src.main:main
